--- a/_output.yml
+++ b/_output.yml
@@ -1,9 +1,9 @@
 bookdown::gitbook:
-  css: "_assets/style.css"
+  css: assets/style.css
   config:
     toc:
       before: |
-        <li class="toc-logo"><a href="./"><img src="_imgs/TerraCampaignsCover.png"></a></li>
+        <li class="toc-logo"><a href="./"><img src="imgs/TerraCampaignsCover.png"></a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: 
