--- a/_output.yml
+++ b/_output.yml
@@ -3,11 +3,11 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li class="toc-logo"><a href="./"><img src="imgs/TerraCampaignsCover.png"></a></li>
+        <li class="toc-logo"><a href="./"><img src="imgs/degenesisBG.png"></a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: 
-      link: https://github.com/efsalvarenga/terraCampaigns_published/edit/main/%s
+      link: https://github.com/efsalvarenga/degenesis/edit/main/%s
       text: "Suggest an edit"
     sharing:
       github: yes
@@ -15,4 +15,4 @@ bookdown::gitbook:
       twitter: yes
       all: no
     fontsettings:
-      theme: night
+      theme: light
