--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ plugins:
 # aux_links:
 #   Repository: https://github.com/terra-campaigns/degenesis
 
-color_scheme: light
+color_scheme: degenesis
 
 # Back to top link
 back_to_top: true
