--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: DEGENESIS
 description: These are Degenesis Materials
 theme: just-the-docs
 
-url: https://terra-campaigns.github.io/degenesis/
+url: https://terra-campaigns.github.io/
 
 permalink: pretty
 plugins:
