--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ favicon_ico: "/imgs/favicon.ico"
 #    hide_icon: false # set to true to hide the external link icon - defaults to false
 #    opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
 
-color_scheme: degenesis
+color_scheme: site
 
 # Back to top link
 back_to_top: true
