--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: PRIMAL ODD
 description: These is the Degenesis Primal Odd campaign website
 theme: just-the-docs
 
-url: https://terra-campaigns.github.io/
+url: https://terra-campaigns.github.io
 
 permalink: pretty
 plugins:
