Removing back to the top config

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ favicon_ico: "/imgs/favicon.ico"
 color_scheme: site
 
 # Back to top link
-back_to_top: true
-back_to_top_text: "Back to top"
+# back_to_top: true
+# back_to_top_text: "Back to top"
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
