--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PRIMAL ODD
-description: These is the Degenesis Primal Odd campaign website
+description: This is the Degenesis Primal Odd campaign website
 theme: just-the-docs
 
 url: https://terra-campaigns.github.io/degenesis
