--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: DEGENESIS
 description: Terra's Degenesis campaign website
 theme: just-the-docs
+logo: "/imgs/DEGENESIS-LOGOTYPES-PACK/DEGENESIS-LOGO.svg"
+
 
 url: https://terra-campaigns.github.io/degenesis
 
